2010-08-08 Roman
- Value: Return values for error set to EVAL.
- FIX:Archive.FSArch: New files creation for old data fixed and made imrovement.
- DB.PostgreSQL: Translation for Russian an Ukrainian is updated and for German, by Irina Popkova, is added.
- FIX:DAQ.BlockCalc: Links reinit is added for disabled blocks on run.
- DAQ.LogicLev: Parameter's object disable is added for the metod and the address changing.
- Special.FLibComplex1: The limit by scale for setpoint of PID is added.
- FIX:UI.QTCfg: A page content update for error into combobox data changing is fixed.
- UI.Vision: A value archive limit by begin is removed for primitive Diagram for archive data getting from reserve station allow.


2010-08-02 Maxim
- FIX:DB:PostgreSQL: 'enable' function is fixed.
- DB:PostgreSQL: 'postDisable' function is added.


2010-08-01 Roman
- !!!:UI.VCAEngine: New session's user-API functions for links link() and linkSet() is added.
    Links info for run sessions' widgets is added. Default text synth string is updated.
- !!:UI.Vision: Atrribute and link value copy is added to context menu for attribute and link inspectors.


2010-07-30 Maxim
- SYS: Syntax error in word "attribute" is fixed everywhere.
- !!!:DB: Module for base realization of DB PostgreSQL is added.
 

2010-07-29 Roman
- DAQ: Redundant task period type is changed to real type.
- SYS: License version for all modules is changed to GPL2.
- !!!:UI.VCAEngine: New session's user-API functions wdgAdd() and wdgDel() is added.
    Return for attrSet() is changed to current object.
- UI.QTCfg: Status bar messages history display is added.


2010-07-24 Roman
- SYS: Tooltip help message is added to task manager for use CPU set.
- UI.VCAEngine: Widget enable message is updated.


2010-07-23 Roman
- SYS: OpenSCADA start script is changed for split check for ~/.openscada directory items present.
- !:DAQ.JavaLikeCalc: Variable's type check is full disable on compile for unary and binary operations.


2010-07-16 Roman