@@ -1,3 +1,8 @@
+2010-08-09 Maxim
+- FIX:DB:PostgreSQL: try->catch is added to the 'enable' and 'postDisable' functions to simplify the finishing of the connection to DB.
+- DB:PostgreSQL: transactions processing is added to improve the performance of the DB module.
+
+
 2010-08-08 Roman
 - Value: Return values for error set to EVAL.
 - FIX:Archive.FSArch: New files creation for old data fixed and made imrovement.
